// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header> renders the hops selector if distanceToPathElems is provided 1`] = `
<header
  className="DdgHeader"
>
  <div
    className="DdgHeader--paramsHeader"
  >
    <NameSelector
      label="Service:"
      options={Array []}
      placeholder="Select a service…"
      required={true}
      setValue={[Function]}
      value={null}
    />
  </div>
  <div
    className="DdgHeader--controlHeader"
  >
    <Component
      distanceToPathElems={Map {}}
      handleClick={[Function]}
      visEncoding="3"
    />
    <withRouter(Connect(UnconnectedUiFindInput))
      inputProps={
        Object {
          "className": "DdgHeader--uiFind",
          "suffix": undefined,
        }
      }
    />
  </div>
</header>
`;

exports[`<Header> renders the operation selector if a service is selected 1`] = `
<header
  className="DdgHeader"
>
  <div
    className="DdgHeader--paramsHeader"
  >
    <NameSelector
      label="Service:"
      options={
        Array [
          "testService",
        ]
      }
      placeholder="Select a service…"
      required={true}
      setValue={[Function]}
      value="testService"
    />
    <NameSelector
      label="Operation:"
      options={Array []}
      placeholder="Select an operation…"
      required={true}
      setValue={[Function]}
      value={null}
    />
  </div>
  <div
    className="DdgHeader--controlHeader"
  >
    <withRouter(Connect(UnconnectedUiFindInput))
      inputProps={
        Object {
          "className": "DdgHeader--uiFind",
          "suffix": undefined,
        }
      }
    />
  </div>
</header>
`;

exports[`<Header> renders the operation selector if a service is selected 2`] = `
<header
  className="DdgHeader"
>
  <div
    className="DdgHeader--paramsHeader"
  >
    <NameSelector
      label="Service:"
      options={
        Array [
          "testService",
        ]
      }
      placeholder="Select a service…"
      required={true}
      setValue={[Function]}
      value="testService"
    />
    <NameSelector
      label="Operation:"
      options={Array []}
      placeholder="Select an operation…"
      required={true}
      setValue={[Function]}
      value="testOperation"
    />
  </div>
  <div
    className="DdgHeader--controlHeader"
  >
    <withRouter(Connect(UnconnectedUiFindInput))
      inputProps={
        Object {
          "className": "DdgHeader--uiFind",
          "suffix": undefined,
        }
      }
    />
  </div>
</header>
`;

exports[`<Header> renders with minimal props 1`] = `
<header
  className="DdgHeader"
>
  <div
    className="DdgHeader--paramsHeader"
  >
    <NameSelector
      label="Service:"
      options={Array []}
      placeholder="Select a service…"
      required={true}
      setValue={[Function]}
      value={null}
    />
  </div>
  <div
    className="DdgHeader--controlHeader"
  >
    <withRouter(Connect(UnconnectedUiFindInput))
      inputProps={
        Object {
          "className": "DdgHeader--uiFind",
          "suffix": undefined,
        }
      }
    />
  </div>
</header>
`;
